unpackaged/main/default/objects/Lead/fields/Sweden_Products__c.field-meta.xml
<CustomField>
    <fullName>Sweden_Products__c</fullName>
    <label>Sweden Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk MSD - Design|Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Surface|Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Auto|Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Image|Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Showcase</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Showcase Pro</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Portfolio Wall</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Direct|Connect</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Training</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Other</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - Maya</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - 3D Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - Sketchbook Pro</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>