unpackaged/main/default/objects/Lead/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Used for Xylem</description>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Product Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>