unpackaged/main/default/objects/Lead/fields/ThirdPreferredTrainingDate__c.field-meta.xml
<CustomField>
    <fullName>ThirdPreferredTrainingDate__c</fullName>
    <label>Third Preferred Training Date</label>
    <type>Date</type>
</CustomField>