unpackaged/main/default/objects/Lead/fields/Total_CAD_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_CAD_Seats__c</fullName>
    <label>Total CAD Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>