unpackaged/main/default/objects/Lead/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <description>Captures the suppliers 3DEXPERIENCE training required..</description>
    <inlineHelpText>This field is used to capture the suppliers 3DEXPERIENCE training required.</inlineHelpText>
    <label>Training</label>
    <length>120</length>
    <type>Text</type>
</CustomField>