unpackaged/main/default/objects/Lead/fields/TrainingLocationPick__c.field-meta.xml
<CustomField>
    <fullName>TrainingLocationPick__c</fullName>
    <label>Training Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brentwood, Essex</fullName>
            </value>
            <value>
                <fullName>Whitley, near Coventry</fullName>
            </value>
            <value>
                <fullName>At Supplier Site</fullName>
            </value>
            <value>
                <fullName>WebEx (online)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>