unpackaged/main/default/objects/Lead/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <formula>IF( LastModifiedById == $User.Id, 
  "",
  "YES"
)</formula>
    <label>IsUpdated</label>
    <type>Text</type>
</CustomField>