unpackaged/main/default/objects/Lead/recordTypes/DassaultSystemes.recordType-meta.xml
<RecordType>
    <fullName>DassaultSystemes</fullName>
    <active>true</active>
    <businessProcess>Leads Process</businessProcess>
    <description>Lead record type for Dassault Systemes (Majenta)</description>
    <label>Dassault Systemes</label>
</RecordType>