unpackaged/main/default/objects/Lead/recordTypes/Internal_Sales_Process.recordType-meta.xml
<RecordType>
    <fullName>Internal_Sales_Process</fullName>
    <active>true</active>
    <businessProcess>Internal Sales Process</businessProcess>
    <description>Record type used for qualifying suspect data</description>
    <label>Suspect Lead</label>
</RecordType>