unpackaged/main/default/objects/Lead/recordTypes/Leads.recordType-meta.xml
<RecordType>
    <fullName>Leads</fullName>
    <active>true</active>
    <businessProcess>Leads Process</businessProcess>
    <description>Use this record type when creating sales leads with interest in a product or service.</description>
    <label>Prospect Lead</label>
</RecordType>