unpackaged/main/default/objects/Lead/recordTypes/Xylem_Hub.recordType-meta.xml
<RecordType>
    <fullName>Xylem_Hub</fullName>
    <active>true</active>
    <businessProcess>Xylem User Creation</businessProcess>
    <description>To be used for leads from the Xylem registration form</description>
    <label>Xylem Hub</label>
</RecordType>