unpackaged/main/default/objects/Lead/validationRules/Status_Qualified_for_Converted_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Qualified_for_Converted_Only</fullName>
    <active>false</active>
    <description>Does not allow status to be changed to qualified unless converted.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status, "Qualified"),  IsConverted = FALSE )</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can not change the lead status to qualified! You must convert the lead to an opportunity!</errorMessage>
</ValidationRule>