unpackaged/main/default/objects/Lead/listViews/Abi_2022Q2_MXList2.listView-meta.xml
<ListView>
    <fullName>Abi_2022Q2_MXList2</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Internal_Sales_Process</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Dead</value>
    </filters>
    <label>Abi_2022Q2_MXList2</label>
</ListView>