unpackaged/main/default/objects/Lead/listViews/Abi_MXCallDay_Q22022.listView-meta.xml
<ListView>
    <fullName>Abi_MXCallDay_Q22022</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Days_since_last_modified__c</columns>
    <columns>LEAD.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Internal_Sales_Process</value>
    </filters>
    <label>Abi_MXCallDay_Q22022</label>
</ListView>