unpackaged/main/default/objects/Lead/listViews/Abi_MXCampaignQ2_2022.listView-meta.xml
<ListView>
    <fullName>Abi_MXCampaignQ2_2022</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.TITLE</columns>
    <columns>Days_since_last_modified__c</columns>
    <columns>LEAD.PHONE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Dead</value>
    </filters>
    <label>Abi_MXCampaignQ2_2022</label>
</ListView>