unpackaged/main/default/objects/Lead/listViews/Abi_MXElectric_Q32022.listView-meta.xml
<ListView>
    <fullName>Abi_MXElectric_Q32022</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Abi_MXElectric_Q32022</label>
    <sharedTo>
        <group>Abigail_Brain</group>
    </sharedTo>
</ListView>