unpackaged/main/default/objects/Lead/listViews/AdwordsLeads.listView-meta.xml
<ListView>
    <fullName>AdwordsLeads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>Division__c</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsAdwords__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Adwords Leads</label>
    <sharedTo>
        <group>MarketingTeam</group>
    </sharedTo>
</ListView>