unpackaged/main/default/objects/Lead/listViews/AllLeadsUnread.listView-meta.xml
<ListView>
    <fullName>AllLeadsUnread</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Leads Unread</label>
</ListView>