unpackaged/main/default/objects/Lead/listViews/Anthony_MXCallDay_Q22022.listView-meta.xml
<ListView>
    <fullName>Anthony_MXCallDay_Q22022</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Internal_Sales_Process</value>
    </filters>
    <label>Anthony_MXCallDay_Q22022</label>
</ListView>