unpackaged/main/default/objects/Lead/listViews/Architects_with_Mobiles_Casey.listView-meta.xml
<ListView>
    <fullName>Architects_with_Mobiles_Casey</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>Days_since_last_modified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Internal_Sales_Process</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>One Way Info,Chase,In Dialogue</value>
    </filters>
    <label>Architects with Mobiles_Casey</label>
    <sharedTo>
        <group>Casey_O_Donnell</group>
        <group>Jack_Stevens</group>
    </sharedTo>
</ListView>