unpackaged/main/default/objects/Lead/listViews/Calling_Account_BIM_NHS_Universities_NG.listView-meta.xml
<ListView>
    <fullName>Calling_Account_BIM_NHS_Universities_NG</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CAMPAIGN_MEMBER.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.ZIP</field>
        <operation>startsWith</operation>
        <value>AB,BA,BH,BN,BR,BS,CB,CM,CO,CR,CT,CW,DA,DD,DG,E1,E11,E13,E16,E9,EC,EH,EX,FK,FY</value>
    </filters>
    <filters>
        <field>LEAD.ZIP</field>
        <operation>startsWith</operation>
        <value>G12,G51,G81,GL,GU,HA,HP,IG,IP,IV,KA,KT,KW,KY,LU,ME,MK,ML,N19,NE,NR,NW,OX,PA,PE</value>
    </filters>
    <filters>
        <field>LEAD.ZIP</field>
        <operation>startsWith</operation>
        <value>PL,PO,RG,RH,SE,SG,SL,SN,SO,SP,SS,SW,TA,TD,TN,TR,TW,UB,W12,W2,W5,WC</value>
    </filters>
    <label>Calling-Account-BIM-NHS-Universities-NG</label>
</ListView>