unpackaged/main/default/objects/Lead/listViews/Calling_Account_DassaultTraining.listView-meta.xml
<ListView>
    <fullName>Calling_Account_DassaultTraining</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <label>Calling-Account-DassaultTraining</label>
    <sharedTo>
        <group>Dassault_Admin_Accounts</group>
        <group>Dassault_Division_Team</group>
    </sharedTo>
</ListView>