unpackaged/main/default/objects/Lead/listViews/Casey_2021_NBS_BIMstore_Competitor_List.listView-meta.xml
<ListView>
    <fullName>Casey_2021_NBS_BIMstore_Competitor_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Internal_Sales_Process</value>
    </filters>
    <label>Casey_2021Q4_BPM_Top100</label>
    <sharedTo>
        <group>Casey_O_Donnell</group>
    </sharedTo>
</ListView>