unpackaged/main/default/objects/Lead/listViews/Casey_2022Q1_Contractors_With_Mobiles.listView-meta.xml
<ListView>
    <fullName>Casey_2022Q1_Contractors_With_Mobiles</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Internal_Sales_Process</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>No Contact - First Call</value>
    </filters>
    <label>Casey_2022Q1_Contractors With Mobiles</label>
    <sharedTo>
        <group>Casey_O_Donnell</group>
    </sharedTo>
</ListView>